I don't even know
Pretty sure it's not working because timer0 is at the wrong frequency, but the 2 different chips and 2 different lighters both do the same thing.

--- a/MPLABX/Test Rig.X/nbproject/Makefile-genesis.properties
+++ b/MPLABX/Test Rig.X/nbproject/Makefile-genesis.properties
@@ -1,10 +1,10 @@
 #
-#Thu Sep 23 10:07:27 EDT 2021
+#Thu Sep 23 15:20:59 EDT 2021
 default.languagetoolchain.version=2.32
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.50\\packs\\Microchip\\PIC12-16F1xxx_DFP\\1.2.63
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.32\\bin
-host.id=0
+host.id=38b5-cwd8-1i
 configurations-xml=624d95b272e9a15f8036d00226649fd4
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5232c20b48df3223daf8c79e5b83e9a8
 user-defined-mime-resolver-xml=none
